add deploy script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guess-number-game",
-  "homepage": "https://billhong6981.github.io/guess-number-app",
+  "homepage": "https://billhong6981.github.io/guess-number-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
